# api-server/api/v1/cluster/cluster.pb.go
@@ -418,7 +418,7 @@ var file_v1_cluster_cluster_proto_rawDesc = string([]byte{
 	0x75, 0x72, 0x69, 0x74, 0x79, 0x18, 0x05, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x20, 0x2e, 0x61, 0x70,
 	0x69, 0x2e, 0x76, 0x31, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2e, 0x43, 0x6c, 0x75,
 	0x73, 0x74, 0x65, 0x72, 0x2e, 0x53, 0x65, 0x63, 0x75, 0x72, 0x69, 0x74, 0x79, 0x42, 0x04, 0xe2,
-	0x41, 0x01, 0x02, 0x52, 0x08, 0x73, 0x65, 0x63, 0x75, 0x72, 0x69, 0x74, 0x79, 0x12, 0x3f, 0x0a,
+	0x41, 0x01, 0x01, 0x52, 0x08, 0x73, 0x65, 0x63, 0x75, 0x72, 0x69, 0x74, 0x79, 0x12, 0x3f, 0x0a,
 	0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x64, 0x20, 0x01, 0x28,
 	0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
 	0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x42, 0x04, 0xe2,
@@ -455,7 +455,7 @@ var file_v1_cluster_cluster_proto_rawDesc = string([]byte{
 	0x75, 0x73, 0x74, 0x65, 0x72, 0x2e, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x52, 0x05, 0x69,
 	0x74, 0x65, 0x6d, 0x73, 0x22, 0x21, 0x0a, 0x09, 0x49, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
 	0x74, 0x12, 0x14, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x04, 0x42, 0x04, 0xe2,
-	0x41, 0x01, 0x02, 0x52, 0x02, 0x69, 0x64, 0x32, 0xa5, 0x03, 0x0a, 0x0e, 0x43, 0x6c, 0x75, 0x73,
+	0x41, 0x01, 0x02, 0x52, 0x02, 0x69, 0x64, 0x32, 0x87, 0x04, 0x0a, 0x0e, 0x43, 0x6c, 0x75, 0x73,
 	0x74, 0x65, 0x72, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x72, 0x0a, 0x0c, 0x4c, 0x69,
 	0x73, 0x74, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x73, 0x12, 0x23, 0x2e, 0x61, 0x70, 0x69,
 	0x2e, 0x76, 0x31, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2e, 0x4c, 0x69, 0x73, 0x74,
@@ -481,10 +481,16 @@ var file_v1_cluster_cluster_proto_rawDesc = string([]byte{
 	0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x1a, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e,
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1f,
 	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x3a, 0x01, 0x2a, 0x1a, 0x14, 0x2f, 0x61, 0x70, 0x69, 0x2f,
-	0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x42,
-	0x23, 0x5a, 0x21, 0x61, 0x70, 0x69, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x61, 0x70,
-	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x3b, 0x63, 0x6c, 0x75,
-	0x73, 0x74, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12,
+	0x60, 0x0a, 0x0d, 0x44, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x43, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72,
+	0x12, 0x19, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x76, 0x31, 0x2e, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65,
+	0x72, 0x2e, 0x49, 0x64, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x67, 0x6f,
+	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x22, 0x1c, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x16, 0x2a, 0x14, 0x2f, 0x61, 0x70,
+	0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x2f, 0x7b, 0x69, 0x64,
+	0x7d, 0x42, 0x23, 0x5a, 0x21, 0x61, 0x70, 0x69, 0x2d, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x3b, 0x63,
+	0x6c, 0x75, 0x73, 0x74, 0x65, 0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 })
 
 var (
@@ -525,12 +531,14 @@ var file_v1_cluster_cluster_proto_depIdxs = []int32{
 	4,  // 8: api.v1.cluster.ClusterService.GetCluster:input_type -> api.v1.cluster.IdRequest
 	1,  // 9: api.v1.cluster.ClusterService.CreateCluster:input_type -> api.v1.cluster.Cluster
 	1,  // 10: api.v1.cluster.ClusterService.UpdateCluster:input_type -> api.v1.cluster.Cluster
-	3,  // 11: api.v1.cluster.ClusterService.ListClusters:output_type -> api.v1.cluster.ListClustersResponse
-	1,  // 12: api.v1.cluster.ClusterService.GetCluster:output_type -> api.v1.cluster.Cluster
-	9,  // 13: api.v1.cluster.ClusterService.CreateCluster:output_type -> google.protobuf.Empty
-	9,  // 14: api.v1.cluster.ClusterService.UpdateCluster:output_type -> google.protobuf.Empty
-	11, // [11:15] is the sub-list for method output_type
-	7,  // [7:11] is the sub-list for method input_type
+	4,  // 11: api.v1.cluster.ClusterService.DeleteCluster:input_type -> api.v1.cluster.IdRequest
+	3,  // 12: api.v1.cluster.ClusterService.ListClusters:output_type -> api.v1.cluster.ListClustersResponse
+	1,  // 13: api.v1.cluster.ClusterService.GetCluster:output_type -> api.v1.cluster.Cluster
+	9,  // 14: api.v1.cluster.ClusterService.CreateCluster:output_type -> google.protobuf.Empty
+	9,  // 15: api.v1.cluster.ClusterService.UpdateCluster:output_type -> google.protobuf.Empty
+	9,  // 16: api.v1.cluster.ClusterService.DeleteCluster:output_type -> google.protobuf.Empty
+	12, // [12:17] is the sub-list for method output_type
+	7,  // [7:12] is the sub-list for method input_type
 	7,  // [7:7] is the sub-list for extension type_name
 	7,  // [7:7] is the sub-list for extension extendee
 	0,  // [0:7] is the sub-list for field type_name
